# coarray-halo-exchange

./: CMakeLists.txt  INTEL-ISSUES.md  README.md
coarray/: CMakeLists.txt  main.f90
coarray/method2/: index_map_type.f90
mpi/: CMakeLists.txt
mpi/f08/: main.f90
mpi/f90/: index_map_type.f90  main.f90
results/: 7970X-32-JUN24.md  SKX-32-DEC24.md  SPR-32-DEC24.md
test-data/opencalc-B1-16/: data001  data002  data003  data004  data005  data006  data007  data008  data009  data010  data011  data012  data013  data014  data015  data016
test-data/opencalc-B1-32/: data001  data002  data003  data004  data005  data006  data007  data008  data009  data010  data011  data012  data013  data014  data015  data016  data017  data018  data019  data020  data021  data022  data023  data024  data025  data026  data027  data028  data029  data030  data031  data032
test-data/opencalc-B1-8/: data001  data002  data003  data004  data005  data006  data007  data008
test-data/opencalc-B2-16/: data001  data002  data003  data004  data005  data006  data007  data008  data009  data010  data011  data012  data013  data014  data015  data016  data020  data022  data023  data024  data027  data028  data029  data031  data032
test-data/opencalc-B2-32/: data001  data002  data003  data004  data005  data006  data007  data008  data009  data010  data011  data012  data013  data014  data015  data016  data017  data018  data019  data021  data025  data026  data030
test-data/opencalc-B2-8/: data001  data002  data003  data004  data005  data006  data007  data008
test-data/opencalc-B3-16/: data001  data002  data003  data004  data005  data006  data007  data008  data009  data010  data011  data012  data013  data014  data015  data016
test-data/opencalc-B3-32/: data001  data002  data003  data004  data005  data006  data007  data008  data009  data010  data011  data012  data013  data014  data015  data016  data017  data018  data019  data020  data021  data022  data023  data024  (+8 more)
(+587 files in other folders)
